--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "play-sound": "^1.1.2"
+    "play-sound": "^1.1.2",
+    "rc": "^1.2.8"
   }
 }
