--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^5.3.0",
     "eslint-plugin-unional": "^1.0.0",
     "jest": "^23.4.2",
+    "satisfier": "^4.5.0",
     "semantic-release": "^15.9.5",
     "ts-jest": "^23.1.2",
     "tslint": "^5.11.0",
