--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,81 +4,104 @@ workflows:
   all:
     jobs:
       - node-latest
-      - node9
-      - node8
+      # - node9
+      # - node8
       - release:
+          filters:
+              branches:
+                  only: master
           requires:
             - node-latest
-            - node9
-            - node8
+            # - node9
+            # - node8
 jobs:
   node-latest:
     docker:
-      - image: 'circleci/node:10'
+      - image: circleci/node:~~~~~~~~~~
     steps:
       - checkout
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: npm install
+          name: Restore node_moduels cache
+          key: node_modules-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: |
+            if [ ! -d node_modules ]; then
+              npm ci
+            fi
       - save_cache:
+          name: Save node modules cache
+          key: node_modules-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm run verify
+      - run: npm run verify-ci
+      - run: npx codecov
+      - store_test_results:
+          path: reports/junit
   node9:
     docker:
       - image: 'circleci/node:9'
     steps:
       - checkout
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: npm install
+          name: Restore node_moduels cache
+          key: node_modules-{{ checksum "package.json" }}
+      - run:
+          name: Install Dependencies
+          command: |
+            if [ ! -d node_modules ]; then
+              npm install
+            fi
       - save_cache:
+          name: Save node modules cache
+          key: node_modules-{{ checksum "package.json" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm run verify
+      - run: npm run verify-ci
+      - store_test_results:
+          path: reports/junit
   node8:
     docker:
       - image: 'circleci/node:8'
     steps:
       - checkout
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: npm install
+          name: Restore node_moduels cache
+          key: node_modules-{{ checksum "package.json" }}
+      - run:
+          name: Install Dependencies
+          command: |
+            if [ ! -d node_modules ]; then
+              npm install
+            fi
       - save_cache:
+          name: Save node modules cache
+          key: node_modules-{{ checksum "package.json" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm run verify
+      - run: npm run verify-ci
+      - store_test_results:
+          path: reports/junit
   release:
     docker:
-      - image: 'circleci/node:10'
+      - image: circleci/node:~~~~~~~~~~
     steps:
       - checkout
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: npm install
-      - run: npm install --no-save semantic-release greenkeeper-lockfile
+          name: Restore node_moduels cache
+          key: node_modules-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: |
+            if [ ! -d node_modules ]; then
+              npm ci
+            fi
       - save_cache:
+          name: Save node modules cache
+          key: node_modules-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm run build
       - run:
           name: update greenkeeper lockfile
           command: ./node_modules/.bin/greenkeeper-lockfile-update
