--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
   "name": "jest-audio-reporter",
-  "description": "Plays audio on jest events",
   "version": "0.0.0-development",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "description": "Plays audio on jest events",
+  "keywords": [
+    "jest",
+    "reporters",
+    "sounds"
+  ],
+  "homepage": "https://github.com/unional/jest-audio-reporter",
+  "bugs": {
+    "url": "https://github.com/unional/jest-audio-reporter/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unional/jest-audio-reporter.git"
+  },
+  "license": "MIT",
   "files": [
     "dist"
   ],
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "npm run clean && tsc -p tsconfig.base.json",
     "clean": "rimraf dist",
@@ -16,65 +30,34 @@
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "lint": "tslint -p tsconfig.json",
     "prepublishOnly": "npm run clean && npm run build",
+    "semantic-release": "semantic-release",
     "test": "tsc && jest",
     "verify": "npm run lint && npm run build && npm run coverage && npm run dependency-check",
-    "watch": "tsc && jest --watch",
-    "semantic-release": "semantic-release"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/unional/jest-audio-reporter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/unional/jest-audio-reporter/issues"
-  },
-  "homepage": "https://github.com/unional/jest-audio-reporter",
-  "keywords": [
-    "jest",
-    "reporters",
-    "sounds"
-  ],
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "enableTsDiagnostics": true
-      }
-    },
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testRegex": ".*.spec.ts$",
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "reporters": [
-      "default",
-      "<rootDir>/dist/index.js"
-    ],
-    "roots": [
-      "<rootDir>/src"
-    ]
-  },
-  "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.7.1",
-    "assertron": "^5.1.4",
-    "dependency-check": "^3.2.0",
-    "eslint": "^5.3.0",
-    "eslint-plugin-unional": "^1.0.0",
-    "jest": "^23.5.0",
-    "satisfier": "^4.5.0",
-    "semantic-release": "^15.9.8",
-    "ts-jest": "^23.1.3",
-    "tslint": "^5.11.0",
-    "tslint-config-unional": "^0.10.0",
-    "typescript": "^3.0.1"
+    "verify-ci": "npm run lint && npm run build && jest --coverage --config jest.config.ci.json && npm run dependency-check",
+    "watch": "tsc && jest --watch"
   },
   "dependencies": {
     "play-sound": "^1.1.2",
     "rc": "^1.2.8"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "@types/node": "^10.12.0",
+    "assertron": "^5.1.4",
+    "codecov": "^3.1.0",
+    "dependency-check": "^3.2.1",
+    "eslint": "^5.7.0",
+    "eslint-plugin-unional": "^1.0.0",
+    "greenkeeper-lockfile": "^1.15.1",
+    "jest": "^23.6.0",
+    "jest-junit": "^5.2.0",
+    "jest-watch-suspend": "^1.1.0",
+    "jest-watch-toggle-config": "^1.0.2",
+    "satisfier": "^4.5.0",
+    "semantic-release": "^15.10.5",
+    "ts-jest": "^23.10.4",
+    "tslint": "^5.11.0",
+    "tslint-config-unional": "^0.10.0",
+    "typescript": "^3.1.3"
   }
 }
