--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,21 @@
 version: 2
+environment:
+  NPM_VERSION: "5.7.0"
 workflows:
   version: 2
   all:
     jobs:
       - node-latest
-      # - node9
-      # - node8
+      - node9
+      - node8
       - release:
           filters:
               branches:
                   only: master
           requires:
             - node-latest
-            # - node9
-            # - node8
+            - node9
+            - node8
 jobs:
   node-latest:
     docker:
@@ -21,7 +23,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          name: Restore node_moduels cache
+          name: Restore node_modules cache
           key: node_modules-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
@@ -44,13 +46,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          name: Restore node_moduels cache
+          name: Restore node_modules cache
           key: node_modules-{{ checksum "package.json" }}
       - run:
           name: Install Dependencies
           command: |
             if [ ! -d node_modules ]; then
-              npm install
+              sudo npm install -g npm@$NPM_VERSION
+              npm ci
             fi
       - save_cache:
           name: Save node modules cache
@@ -66,13 +69,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          name: Restore node_moduels cache
+          name: Restore node_modules cache
           key: node_modules-{{ checksum "package.json" }}
       - run:
           name: Install Dependencies
           command: |
             if [ ! -d node_modules ]; then
-              npm install
+              sudo npm install -g npm@$NPM_VERSION
+              npm ci
             fi
       - save_cache:
           name: Save node modules cache
@@ -88,7 +92,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          name: Restore node_moduels cache
+          name: Restore node_modules cache
           key: node_modules-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
@@ -101,7 +105,6 @@ jobs:
           key: node_modules-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run: npm run build
       - run:
           name: update greenkeeper lockfile
           command: ./node_modules/.bin/greenkeeper-lockfile-update
