--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && tsc -p tsconfig.base.json",
+    "build": "tsc -p tsconfig.base.json",
     "clean": "rimraf dist",
-    "codecov": "codecov",
     "coverage": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "lint": "tslint -p tsconfig.json",
-    "prepublishOnly": "npm run clean && npm run build",
     "semantic-release": "semantic-release",
     "test": "tsc && jest",
     "verify": "npm run lint && npm run build && npm run coverage && npm run dependency-check",
