--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - checkout
       - restore_cache:
           name: Restore node_modules cache
-          key: node_modules-{{ checksum "package.json" }}
+          key: node_modules-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: |
@@ -55,7 +55,7 @@ jobs:
             fi
       - save_cache:
           name: Save node modules cache
-          key: node_modules-{{ checksum "package.json" }}
+          key: node_modules-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - run: npm run verify-ci
@@ -68,7 +68,7 @@ jobs:
       - checkout
       - restore_cache:
           name: Restore node_modules cache
-          key: node_modules-{{ checksum "package.json" }}
+          key: node_modules-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: |
@@ -78,7 +78,7 @@ jobs:
             fi
       - save_cache:
           name: Save node modules cache
-          key: node_modules-{{ checksum "package.json" }}
+          key: node_modules-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - run: npm run verify-ci
