use tslint-language-service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,13 @@
   },
   "buildOnSave": false,
   "compileOnSave": false,
+  "compilerOptions": {
+    "plugins": [
+      {
+        "name": "tslint-language-service"
+      }
+    ]
+  },
   "include": [
     "src"
   ]
