--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "tslint-config-unional": "^0.10.0",
+    "tslint-language-service": "^0.9.9",
     "typescript": "^3.1.3"
   }
 }
