--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,20 +4,38 @@ workflows:
   all:
     jobs:
       - node-latest
-      - node9
-      - node8
+      - node10:
+          requires:
+            - node-latest
+      - node9:
+          requires:
+            - node-latest
+      - node8:
+          requires:
+            - node-latest
+      - node6:
+          requires:
+            - node-latest
       - release:
           filters:
             branches:
               only: master
           requires:
             - node-latest
+            - node10
             - node9
             - node8
+            - node6
 jobs:
+  local:
+    docker:
+      - image: circleci/node:11
+    steps:
+      - checkout
+      - run: npm run verify
   node-latest:
     docker:
-      - image: circleci/node:10
+      - image: circleci/node:11
     steps:
       - checkout
       - restore_cache:
@@ -28,86 +46,67 @@ jobs:
           command: |
             if [ ! -d node_modules ]; then
               npm ci
+              npm i --no-save jest-junit
             fi
       - save_cache:
           name: Save node modules cache
           key: node_modules-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run: npm run verify-ci
+      - persist_to_workspace:
+          root: '.'
+          paths:
+            - node_modules
+      - run: npm run verify
       - run: npx codecov
       - store_test_results:
-          path: reports/junit
+          path: .reports/junit
+  node10:
+    docker:
+      - image: 'circleci/node:9'
+    steps:
+      - checkout
+      - attach_workspace:
+          at: '.'
+      - run: npm run verify
+      - store_test_results:
+          path: .reports/junit
   node9:
     docker:
       - image: 'circleci/node:9'
     steps:
       - checkout
-      - restore_cache:
-          name: Restore node_modules cache
-          key: node_modules-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Dependencies
-          command: |
-            if [ ! -d node_modules ]; then
-              sudo npm install -g npm@$NPM_VERSION
-              npm ci
-            fi
-      - save_cache:
-          name: Save node modules cache
-          key: node_modules-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - run: npm run verify-ci
+      - attach_workspace:
+          at: '.'
+      - run: npm run verify
       - store_test_results:
-          path: reports/junit
+          path: .reports/junit
   node8:
     docker:
       - image: 'circleci/node:8'
     steps:
       - checkout
-      - restore_cache:
-          name: Restore node_modules cache
-          key: node_modules-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Dependencies
-          command: |
-            if [ ! -d node_modules ]; then
-              sudo npm install -g npm@$NPM_VERSION
-              npm ci
-            fi
-      - save_cache:
-          name: Save node modules cache
-          key: node_modules-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - run: npm run verify-ci
+      - attach_workspace:
+          at: '.'
+      - run: npm run verify
       - store_test_results:
-          path: reports/junit
-  release:
+          path: .reports/junit
+  node6:
     docker:
-      - image: circleci/node:10
+      - image: 'circleci/node:6'
     steps:
       - checkout
-      - restore_cache:
-          name: Restore node_modules cache
-          key: node_modules-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Dependencies
-          command: |
-            if [ ! -d node_modules ]; then
-              npm ci
-            fi
-      - save_cache:
-          name: Save node modules cache
-          key: node_modules-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - run:
-          name: update greenkeeper lockfile
-          command: ./node_modules/.bin/greenkeeper-lockfile-update
+      - attach_workspace:
+          at: '.'
+      - run: npm run verify
+      - store_test_results:
+          path: .reports/junit
+  release:
+    docker:
+      - image: circleci/node:11
+    steps:
+      - checkout
+      - attach_workspace:
+          at: '.'
       - run: npm run build
-      - run:
-          name: upload greenkeeper lockfile
-          command: ./node_modules/.bin/greenkeeper-lockfile-upload
       - run: npx semantic-release
