--- a/package.json
+++ b/package.json
@@ -24,39 +24,20 @@
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
     "clean": "rimraf dist",
-    "coverage": "jest --coverage",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "dc": "npm run dependency-check",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "lint": "tslint -p tsconfig.json",
-    "semantic-release": "semantic-release",
-    "test": "tsc && jest",
-    "verify": "npm run lint && npm run build && npm run coverage && npm run dependency-check",
-    "verify-ci": "npm run lint && npm run build && jest --coverage --config jest.config.ci.json && npm run dependency-check",
-    "watch": "tsc && jest --watch"
+    "test": "jest",
+    "verify": "npm run lint && npm run build && npm run dependency-check && jest --coverage",
+    "watch": "jest --watch"
   },
   "dependencies": {
-    "play-sound": "^1.1.2",
+    "play-sound": "^1.1.3",
     "rc": "^1.2.8"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.7",
-    "@types/node": "^10.12.0",
-    "assertron": "^5.2.0",
-    "codecov": "^3.1.0",
-    "dependency-check": "^3.2.1",
-    "eslint": "^5.7.0",
-    "eslint-plugin-unional": "^1.0.0",
-    "greenkeeper-lockfile": "^1.15.1",
-    "jest": "^23.6.0",
-    "jest-junit": "^5.2.0",
-    "jest-watch-suspend": "^1.1.0",
-    "jest-watch-toggle-config": "^1.0.2",
-    "satisfier": "^4.5.0",
-    "semantic-release": "^15.10.5",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0",
-    "tslint-config-unional": "^0.10.0",
-    "tslint-language-service": "^0.9.9",
-    "typescript": "^3.1.3"
+    "@unional/devpkg-node": "^1.1.1",
+    "assertron": "^5.2.3",
+    "satisfier": "^4.5.0"
   }
 }
