fix: update types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,12 @@
       ],
       "url": "http://json.schemastore.org/tsconfig"
     }
+  ],
+  "cSpell.words": [
+    "afplay",
+    "devel",
+    "mplayer",
+    "reporterrc",
+    "roso"
   ]
 }
