--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "url": "https://github.com/unional/jest-audio-reporter.git"
   },
   "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
     "clean": "rimraf dist",
     "dc": "npm run dependency-check",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint --ext=ts,js .",
     "test": "jest",
     "verify": "npm run lint && npm run build && npm run dependency-check && jest --coverage",
     "watch": "jest --watch"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "dependencies": {
     "@jest/reporters": "^27.3.1",
@@ -55,7 +55,7 @@
     "@types/jest": "^27.0.2",
     "assertron": "^7.1.3",
     "dependency-check": "^4.1.0",
-    "eslint": "7",
+    "eslint": "^7.28.0",
     "eslint-plugin-harmony": "^5.1.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
