--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,21 @@
 {
-  "extends": "plugin:unional/latest",
   "env": {
+    "es6": true,
+    "jest": true,
     "node": true
-  }
+  },
+  "extends": "plugin:harmony/latest",
+  "overrides": [
+    {
+      "extends": "plugin:harmony/ts-recommended",
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "parserOptions": {
+        "project": "tsconfig.json"
+      }
+    }
+  ],
+  "root": true
 }
