chore: use test --coverage instead

--- a/.github/workflows/ndoejs.yml
+++ b/.github/workflows/ndoejs.yml
@@ -65,7 +65,7 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
       - run: yarn
-      - run: yarn coverage --maxWorkers=2
+      - run: yarn test --coverage --maxWorkers=2
       - name: codecov
         if: matrix.node-version == 14 && matrix.os == 'ubuntu-latest'
         uses: codecov/codecov-action@v1
