chore: update action steps

--- a/.github/workflows/ndoejs.yml
+++ b/.github/workflows/ndoejs.yml
@@ -29,17 +29,14 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/yarn.lock') }}
       - run: yarn
-      - run: yarn lint
-      - run: yarn build
-      - run: yarn dependency-check
+      - run: yarn run-p build+depcheck lint
   test:
     runs-on: ${{ matrix.os }}
     needs: build
     strategy:
       matrix:
-        # os: ['ubuntu-latest']
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        node-version: [10, 12, 14]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [12, 14, 16]
     steps:
       - uses: actions/checkout@v1
         with:
@@ -65,14 +62,14 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
       - run: yarn
-      - run: yarn test --coverage --maxWorkers=2
+      - run: yarn coverage --maxWorkers=2
       - name: codecov
-        if: matrix.node-version == 14 && matrix.os == 'ubuntu-latest'
+        if: matrix.node-version == 16 && matrix.os == 'ubuntu-latest'
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: codacy
-        if: github.repository == 'unional/type-plus' && matrix.node-version == 14 && matrix.os == 'ubuntu-latest'
+        if: github.repository == 'unional/jest-audio-reporter' && matrix.node-version == 16 && matrix.os == 'ubuntu-latest'
         uses: codacy/codacy-coverage-reporter-action@master
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
