--- a/package.json
+++ b/package.json
@@ -16,28 +16,62 @@
     "url": "https://github.com/unional/jest-audio-reporter.git"
   },
   "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
+    "build+depcheck": "run-s build depcheck",
     "clean": "rimraf dist",
-    "dc": "npm run dependency-check",
-    "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
-    "lint": "tslint -p tsconfig.json",
+    "coverage": "jest --coverage",
+    "depcheck": "run-p depcheck:unused depcheck:missing",
+    "depcheck:unused": "dependency-check . --unused --no-dev -i @jest/reporters -i @jest/test-result -i @jest/types",
+    "depcheck:missing": "dependency-check . --missing --no-dev",
+    "lint": "eslint --ext=ts,js .",
     "test": "jest",
-    "verify": "npm run lint && npm run build && npm run dependency-check && jest --coverage",
+    "verify": "run-p build+depcheck lint coverage",
     "watch": "jest --watch"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
+    "@jest/reporters": "^27.3.1",
+    "@jest/test-result": "^27.3.1",
+    "@jest/types": "^27.2.5",
     "play-sound": "^1.1.3",
     "rc": "^1.2.8"
   },
   "devDependencies": {
-    "@unional/devpkg-node": "^1.3.0",
-    "assertron": "^7.0.1",
-    "satisfier": "^5.0.2"
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@types/jest": "^27.0.2",
+    "assertron": "^7.1.3",
+    "dependency-check": "^4.1.0",
+    "eslint": "^7.28.0",
+    "eslint-plugin-harmony": "^5.1.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "jest-junit": "^13.0.0",
+    "jest-progress-tracker": "^2.0.2",
+    "jest-validate": "^27.3.1",
+    "jest-watch-suspend": "^1.1.2",
+    "jest-watch-toggle-config": "^2.0.1",
+    "jest-watch-typeahead": "^1.0.0",
+    "npm-check-updates": "^11.8.5",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "satisfier": "^5.1.0",
+    "typescript": "^4.4.4"
   }
 }
