chore: add missing scripts

--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
-    "build+depcheck": "run-s build depcheck",
+    "build+depcheck": "run-s build dependency-check",
     "clean": "rimraf dist",
     "coverage": "jest --coverage",
-    "depcheck": "run-p depcheck:unused depcheck:missing",
-    "depcheck:unused": "dependency-check . --unused --no-dev -i @jest/reporters -i @jest/test-result -i @jest/types",
-    "depcheck:missing": "dependency-check . --missing --no-dev",
+    "dependency-check": "run-p dependency-check:unused dependency-check:missing",
+    "dependency-check:unused": "dependency-check . --unused --no-dev -i @jest/reporters -i @jest/test-result -i @jest/types",
+    "dependency-check:missing": "dependency-check . --missing --no-dev",
     "lint": "eslint --ext=ts,js .",
+    "release": "npx semantic-release",
+    "size-limit": "",
     "test": "jest",
     "verify": "run-p build+depcheck lint coverage",
     "watch": "jest --watch"
