chore: update project

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "ts"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
