--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "ts"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
-    "build+depcheck": "run-s build depcheck",
+    "build+dependency-check": "run-s build dependency-check",
     "clean": "rimraf dist",
     "coverage": "jest --coverage",
-    "depcheck": "run-p depcheck:unused depcheck:missing",
-    "depcheck:unused": "dependency-check . --unused --no-dev -i @jest/reporters -i @jest/test-result -i @jest/types",
-    "depcheck:missing": "dependency-check . --missing --no-dev",
+    "dependency-check": "run-p dependency-check:unused dependency-check:missing",
+    "dependency-check:unused": "dependency-check . --unused --no-dev -i @jest/reporters -i @jest/test-result -i @jest/types",
+    "dependency-check:missing": "dependency-check . --missing --no-dev",
     "lint": "eslint --ext=ts,js .",
+    "release": "npx semantic-release",
+    "size-limit": "echo no-op",
     "test": "jest",
-    "verify": "run-p build+depcheck lint coverage",
+    "verify": "run-p build+dependency-check size-limit lint coverage",
     "watch": "jest --watch"
   },
   "husky": {
