--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.base.json",
-    "build+dependency-check": "run-s build dependency-check",
     "clean": "rimraf dist",
     "coverage": "jest --coverage",
+    "depscheck": "run-p dependency-check:unused dependency-check:missing",
     "dependency-check": "run-p dependency-check:unused dependency-check:missing",
     "dependency-check:unused": "dependency-check . --unused --no-dev -i @jest/reporters -i @jest/test-result -i @jest/types",
     "dependency-check:missing": "dependency-check . --missing --no-dev",
     "lint": "eslint --ext=ts,js .",
     "release": "npx semantic-release",
-    "size-limit": "echo no-op",
+    "size-limit": "echo no size-limit",
     "test": "jest",
-    "verify": "run-p build+dependency-check size-limit lint coverage",
+    "verify": "run-p verify:build lint coverage",
+    "verify:build": "npm-run-all clean build --parallel dependency-check size-limit",
     "watch": "jest --watch"
   },
   "husky": {
@@ -43,19 +44,13 @@
     }
   },
   "dependencies": {
-    "@jest/reporters": "^27.3.1",
-    "@jest/test-result": "^27.3.1",
+    "@jest/reporters": "^27.4.6",
+    "@jest/test-result": "^27.4.6",
     "@jest/types": "^27.2.5",
-    "play-sound": "^1.1.3",
+    "play-sound": "^1.1.5",
     "rc": "^1.2.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@types/jest": "^27.0.2",
@@ -64,10 +59,10 @@
     "eslint": "^8.0.0",
     "eslint-plugin-harmony": "^6.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.3.1",
+    "jest": "^27.4.7",
     "jest-junit": "^13.0.0",
     "jest-progress-tracker": "^3.0.0",
-    "jest-validate": "^27.3.1",
+    "jest-validate": "^27.4.6",
     "jest-watch-suspend": "^1.1.2",
     "jest-watch-toggle-config": "^2.0.1",
     "jest-watch-typeahead": "^1.0.0",
@@ -75,6 +70,7 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "satisfier": "^5.1.0",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.4.4"
   }
 }
