--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,7 +11,7 @@
     "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
-    "outDir": "dist",
+    "outDir": "cjs",
     "removeComments": false,
     "sourceMap": true,
     "strictNullChecks": true,
